k8s/overlays/net-kong/be-minio-httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: be-minio-route
  namespace: minio-namespace
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "300m"
spec:
  parentRefs:
    - name: kong
      namespace: kong-gateway-namespace
  hostnames:
    - minio.s4v3.local
    - minio.s4v3.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: minio
          port: 9000
